--- a/.bunnyshell/bunnyshell.yaml
+++ b/.bunnyshell/bunnyshell.yaml
@@ -1,8 +1,25 @@
 kind: Environment
 name: preview
 type: primary
-urlHandle: la24ab
+urlHandle: x2ems5
 components:
+    -
+        kind: Application
+        name: grafana
+        gitRepo: 'https://github.com/Nhoub/DevOps.git'
+        gitBranch: main
+        gitApplicationPath: grafana
+        dockerCompose:
+            build:
+                context: ./grafana
+                dockerfile: Dockerfile
+            ports:
+                - '3000:3000'
+        hosts:
+            -
+                hostname: 'grafana-{{ env.base_domain }}'
+                path: /
+                servicePort: 3000
     -
         kind: Database
         name: mongo-service
@@ -10,6 +27,27 @@ components:
             image: mongo
             ports:
                 - '27017:27017'
+    -
+        kind: Database
+        name: mongodb-exporter
+        dockerCompose:
+            environment:
+                MONGODB_URI: 'mongodb://mongo-database:27017'
+            image: 'bitnami/mongodb-exporter:latest'
+            ports:
+                - '9216:9216'
+    -
+        kind: Service
+        name: prometheus
+        dockerCompose:
+            image: prom/prometheus
+            ports:
+                - '9090:9090'
+        hosts:
+            -
+                hostname: 'prometheus-{{ env.base_domain }}'
+                path: /
+                servicePort: 9090
     -
         kind: Service
         name: rabbitmq
@@ -29,7 +67,7 @@ components:
     -
         kind: Application
         name: service1
-        gitRepo: 'https://github.com/ImkeLooman/NewDevops.git'
+        gitRepo: 'https://github.com/Nhoub/DevOps.git'
         gitBranch: main
         gitApplicationPath: service1
         dockerCompose:
@@ -38,20 +76,20 @@ components:
                 dockerfile: Dockerfile
             environment:
                 MONGODB_HOST: 'mongodb://mongo-service:27017'
-                PORT: '3000'
+                PORT: '3005'
                 RABBITMQ_HOST: 'amqp://user:password@rabbitmq'
                 RABBITMQ_SEND: channel1
             ports:
-                - '3000:3000'
+                - '3005:3005'
         hosts:
             -
                 hostname: 'service1-{{ env.base_domain }}'
                 path: /
-                servicePort: 3000
+                servicePort: 3005
     -
         kind: Application
         name: service2
-        gitRepo: 'https://github.com/ImkeLooman/NewDevops.git'
+        gitRepo: 'https://github.com/Nhoub/DevOps.git'
         gitBranch: main
         gitApplicationPath: service2
         dockerCompose:
